--- a/seibo_party/index.html
+++ b/seibo_party/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>星墓編成ツール</title>
+
+    <meta property="og:title" content="星墓編成ツール">
+      <meta property="og:description" content="破壊の星墓の編成アシストツール">
+      <meta property="og:type" content="website">
+      <meta property="og:url" content="https://enmKos.github.io/kospage/seibo_party/index.html">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
