--- a/seibo_party/index.html
+++ b/seibo_party/index.html
@@ -6,9 +6,10 @@
     <title>星墓編成ツール</title>
 
     <meta property="og:title" content="星墓編成ツール">
-      <meta property="og:description" content="破壊の星墓の編成アシストツール">
-      <meta property="og:type" content="website">
-      <meta property="og:url" content="https://enmKos.github.io/kospage/seibo_party/index.html">
+    <meta property="og:description" content="破壊の星墓の編成アシストツール">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://enmKos.github.io/kospage/seibo_party/index.html">
+    <meta property="og:image" content="https://enmKos.github.io/kospage/seibo_party/mamu.png">
     
     <link rel="stylesheet" href="style.css">
 </head>
