--- a/seibo_party/index.html
+++ b/seibo_party/index.html
@@ -45,10 +45,22 @@
                 <input type="text" id="character-name" class="text-input">
                 
                 <p class="section-label">わくわくの実</p>
-                <select class="dropdown-menu ability-selector"></select>
-                <select class="dropdown-menu ability-selector"></select>
-                <select class="dropdown-menu ability-selector"></select>
-                <select class="dropdown-menu ability-selector"></select>
+                <div class="ability-row">
+                    <select class="dropdown-menu ability-selector"></select>
+                    <input type="checkbox" class="ability-checkbox" disabled>
+                </div>
+                <div class="ability-row">
+                    <select class="dropdown-menu ability-selector"></select>
+                    <input type="checkbox" class="ability-checkbox" disabled>
+                </div>
+                <div class="ability-row">
+                    <select class="dropdown-menu ability-selector"></select>
+                    <input type="checkbox" class="ability-checkbox" disabled>
+                </div>
+                <div class="ability-row">
+                    <select class="dropdown-menu ability-selector"></select>
+                    <input type="checkbox" class="ability-checkbox" disabled>
+                </div>
 
                 <p class="section-label">魂の紋章</p>
                 <select class="dropdown-menu crest-selector"></select>
