--- a/seibo_party/index.html
+++ b/seibo_party/index.html
@@ -78,6 +78,7 @@
                     <button id="clear-button" class="io-button">表をクリア</button>
                     <button id="import-button" class="io-button">インポート</button>
                     <button id="export-button" class="io-button">エクスポート</button>
+                    <button id="refined-button" class="io-button">旧データの修正</button>
                     <input type="file" id="import-file-input" style="display: none;" accept="application/json">
                 </div>
                 <table>
