--- a/seibo_party/index.html
+++ b/seibo_party/index.html
@@ -44,7 +44,7 @@
                 <p class="section-label">名前</p>
                 <input type="text" id="character-name" class="text-input">
                 
-                <p class="section-label">わくわくの実</p>
+                <p class="section-label">わくわくの実 / EL適用</p>
                 <div class="ability-row">
                     <select class="dropdown-menu ability-selector"></select>
                     <input type="checkbox" class="ability-checkbox" disabled>
